# job-hunt-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  repl.rs  repository.rs  scraper.rs  site.rs
