[package]
name = "jobhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.15.0"
regex = "1"
chrono = "0.4.23"
colored = "2.0.0"
rustyline = "11.0.0"
thiserror = "1.0.39"
