[package]
name = "jobhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.16", features = ["blocking"]}
scraper = "0.17.1"
regex = "1.7.3"
chrono = { version = "0.4.*", default-features = false, features = ["serde", "clock"] }
colored = "2.0.0"
rustyline = "12.0.0"
thiserror = "1.0.40"
itertools = "0.11.0"
